<resources>
    <string name="app_name">Khalo1</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="ticket">My Tickets</string>
    <string name="description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <string name="my_image_desc">image</string>
    <string name="Title">On View: Impact of Extrinsic Motivation On Intrinsic Motivation</string>
    <string name="subtitle">Lorem ipsum dolor sit amet, consectetur.</string>
    <string name="time">Daily: 10am-5pm.</string>
    <string name="book_a_visit">Book a Visit</string>
    <string name="impact">Impact Of Extrinsic Motivation on Instrinsic.</string>
    <string name="starts_today">STARTS TODAY</string>
    <string name="still_screening_1pm_8pm">Still Screening, 1pm - 8pm</string>
    <string name="the_italian_renaissance_da_vinci_s_codex">The Italian Renaissance: Da-Vinci\'s codex</string>
    <string name="arms_and_armor_marquee">Arms and Armor Marquee</string>
    <string name="post_impressionism_van_gogh">Post-Impressionism: Van-Gogh</string>
    <string name="highlights">Highlights</string>
    <string name="frankie_cordoba">Frankie Cordoba is heading for the limelights at this years FLANN.</string>
    <string name="h3">The Art of fashion \n Some interviewee takes us through the years, from the 1700 till now </string>
    <string name="upcoming_exhibition">Upcoming Exhibition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="exhibiton_title_ticket">Intrinsic Motivation and the Life of Monty Python</string>
    <string name="ticket_time_1">20/07/2022, 12.00pm, - 1.30pm</string>
    <string name="exhibit_time_2">Coming Thursday, 6.00pm</string>
    <string name="community_card_text">We host weekely meetings for Art enthusiasts.Come Joins us, and forge friendships as we learn together</string>
    <string name="drawing_painting"><![CDATA[Drawing & Painting]]></string>
</resources>