<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:id="@+id/latest_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:foreground="#79000000"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gallery"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:paddingTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/subtitle"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/book_a_visit"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_exhibition"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/proceed"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp">
                <LinearLayout
                    android:paddingStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp">
                        <LinearLayout
                            android:layout_width="175dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/latest_image"
                                android:transitionName="latest_image"
                                android:layout_width="match_parent"
                                android:layout_height="125dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/fragment_queen"
                                />
                            <TextView
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                                android:paddingBottom="2dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/impact"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/starts_today"
                                android:textColor="@color/KhaloYellow"/>
                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp">
                        <LinearLayout
                            android:layout_width="175dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="125dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/fragment_queen"
                                />
                            <TextView
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                                android:paddingBottom="2dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/the_italian_renaissance_da_vinci_s_codex"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/still_screening_1pm_8pm"
                                android:textColor="@color/KhaloYellow"/>
                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp">
                        <LinearLayout
                            android:layout_width="175dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="125dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/fragment_queen"
                                />
                            <TextView
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                                android:paddingBottom="2dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/post_impressionism_van_gogh"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="This Thursday, 10am-5pm"
                                android:textColor="@color/KhaloYellow"/>
                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="0dp">
                        <LinearLayout
                            android:layout_width="175dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="125dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/fragment_queen"
                                />
                            <TextView
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                                android:lines="2"
                                android:paddingBottom="2dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/arms_and_armor_marquee"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/starts_today"
                                android:textColor="@color/KhaloYellow"/>
                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/highlights"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/proceed"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:paddingHorizontal="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0.5dp"
                    app:strokeColor="?attr/colorControlNormal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="185dp"
                            android:src="@drawable/the_annunciation"
                            android:scaleType="centerCrop"
                            />
                        <TextView
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/frankie_cordoba"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0.5dp"
                    app:strokeColor="?attr/colorControlNormal">
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="185dp"
                            android:src="@drawable/hi1"
                            android:scaleType="centerCrop"
                            />
                        <TextView
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/h3"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0.5dp"
                    app:strokeColor="?attr/colorControlNormal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="185dp"
                            android:src="@drawable/fragment_queen"
                            android:scaleType="centerCrop"
                            />
                        <TextView
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/frankie_cordoba"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>