<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketsFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/global_toolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleCentered="true"
        app:title="KHALO"
        app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_gravity="end"
            app:cardCornerRadius="16dp"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fragment_queen" />
        </com.google.android.material.card.MaterialCardView>


    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/hash"
        style="@style/Widget.Material3.CardView.Outlined"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exhibition"
                android:textColor="@color/KhaloYellow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exhibiton_title_ticket"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hash"
                android:layout_marginVertical="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ticket_time_1"
                android:textColor="@color/green"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/hash"
        app:cardElevation="0dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Interest Group"
                android:textColor="@color/KhaloYellow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Handicraft"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hash"
                android:layout_marginVertical="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exhibit_time_2"
                android:textColor="@color/green"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>